[package]
name = "in3"
version = "0.1.0"
authors = ["slock.it <in3@slock.it>"]
description = "High level bindings to IN3 library"
edition = "2018"

[features]
blocking = ["reqwest", "openssl"]

[dependencies]
in3-sys = { path = "../in3-sys" }
libc = { version = "0.2", default-features = false }
reqwest = { version = "0.10", features = ["blocking","json"], optional = true }
serde_json = "1.0"
openssl = {version = "0.10", features = ["vendored"], optional = true}
surf = "1.0.3"
serde = { version = "1.0.106", features = ["derive"] }
hex = "0.4.2"

[dev-dependencies]
async-std = "1.5.0"