[package]
name = "in3"
version = "0.1.0"
authors = ["slock.it <in3@slock.it>"]
description = "High level bindings to IN3 library"
edition = "2018"

[features]
blocking = ["async-std"]

[dependencies]
in3-sys = { path = "../in3-sys" }
libc = { version = "0.2", default-features = false }
serde_json = "1.0"
surf = "1.0.3"
serde = { version = "1.0.106", features = ["derive"] }
ethereum-types = "0.9.0"
rustc-hex = "1.0.0"
async-trait = "0.1.30"
async-std = {version = "1.5.0", optional = true}

[dev-dependencies]
async-std = "1.5.0"
