[package]
name = "in3"
version = "0.0.1"
authors = ["slock.it <products@slock.it>"]
description = "High-level bindings to IN3 library"
license-file = "LICENSE"
homepage = "https://slock.it/incubed/"
documentation = "https://in3.readthedocs.io"
repository = "https://github.com/slockit/in3-c"
readme = "README.md"
edition = "2018"

[features]
blocking = ["async-std"]

[dependencies]
in3-sys = { path = "../in3-sys", version = "0.0.*" }
libc = { version = "0.2", default-features = false }
serde_json = "1.0"
surf = "1.0.3"
serde = { version = "1.0.106", features = ["derive"] }
ethereum-types = "0.9.0"
rustc-hex = "1.0.0"
async-trait = "0.1.30"
async-std = {version = "1.5.0", optional = true}
libsecp256k1 = "0.3.5"
sha3 = "0.8.2"
base64 = "0.12.1"

[dev-dependencies]
async-std = "1.5.0"
