[package]
name = "in3-sys"
version = "0.0.2"
authors = ["slock.it <products@slock.it>"]
description = "Low-level bindings to the IN3 library"
license-file = "LICENSE"
homepage = "https://slock.it/incubed/"
documentation = "https://in3.readthedocs.io"
repository = "https://github.com/slockit/in3-c"
readme = "README.md"
edition = "2018"
build = "build.rs"
links = "in3"

[dependencies]
libc = { version = "0.2" }

[build-dependencies]
bindgen = "0.53.0"
cmake = "0.1.44"
